[gd_scene load_steps=11 format=2]

[ext_resource path="res://inventory/Inventory.gd" type="Script" id=1]
[ext_resource path="res://inventory/grid.png" type="Texture" id=2]
[ext_resource path="res://inventory/inventory-panel.png" type="Texture" id=3]
[ext_resource path="res://inventory/toggleOff.ogg" type="AudioStream" id=4]
[ext_resource path="res://inventory/toggleOn.ogg" type="AudioStream" id=5]
[ext_resource path="res://inventory/Slot.gd" type="Script" id=6]
[ext_resource path="res://inventory/SlotGrid.gd" type="Script" id=7]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 56, 58 )
modulate_color = Color( 1, 1, 1, 0.392157 )

[sub_resource type="Animation" id=2]
resource_name = "close"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("InventoryGUI:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "open"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("InventoryGUI:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Inventory" type="Node2D"]
position = Vector2( 25, -100 )
script = ExtResource( 1 )

[node name="InventoryGUI" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = -50.0
margin_right = 171.0
margin_bottom = 56.0
rect_rotation = 0.39457
texture = ExtResource( 3 )
expand = true

[node name="SlotGrid" type="GridContainer" parent="InventoryGUI"]
margin_left = 16.096
margin_top = 13.8895
margin_right = 156.096
margin_bottom = 93.8895
focus_mode = 1
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 7
script = ExtResource( 7 )

[node name="Slot1" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot2" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 20.0
margin_right = 40.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot3" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 40.0
margin_right = 60.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot4" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 60.0
margin_right = 80.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot5" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 80.0
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot6" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 100.0
margin_right = 120.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot7" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 120.0
margin_right = 140.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot8" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_top = 20.0
margin_right = 20.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot9" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 20.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot10" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 40.0
margin_top = 20.0
margin_right = 60.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot11" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 60.0
margin_top = 20.0
margin_right = 80.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot12" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 80.0
margin_top = 20.0
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot13" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 100.0
margin_top = 20.0
margin_right = 120.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot14" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 120.0
margin_top = 20.0
margin_right = 140.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot15" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_top = 40.0
margin_right = 20.0
margin_bottom = 60.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot16" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 20.0
margin_top = 40.0
margin_right = 40.0
margin_bottom = 60.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot17" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 40.0
margin_top = 40.0
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot18" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 60.0
margin_top = 40.0
margin_right = 80.0
margin_bottom = 60.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot19" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 80.0
margin_top = 40.0
margin_right = 100.0
margin_bottom = 60.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot20" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 100.0
margin_top = 40.0
margin_right = 120.0
margin_bottom = 60.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot21" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 120.0
margin_top = 40.0
margin_right = 140.0
margin_bottom = 60.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot22" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_top = 60.0
margin_right = 20.0
margin_bottom = 80.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot23" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 20.0
margin_top = 60.0
margin_right = 40.0
margin_bottom = 80.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot24" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 40.0
margin_top = 60.0
margin_right = 60.0
margin_bottom = 80.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot25" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 60.0
margin_top = 60.0
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot26" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 80.0
margin_top = 60.0
margin_right = 100.0
margin_bottom = 80.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot27" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 100.0
margin_top = 60.0
margin_right = 120.0
margin_bottom = 80.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Slot28" type="Panel" parent="InventoryGUI/SlotGrid"]
margin_left = 120.0
margin_top = 60.0
margin_right = 140.0
margin_bottom = 80.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )

[node name="Toggle" type="AnimationPlayer" parent="InventoryGUI"]
root_node = NodePath("../..")
anims/close = SubResource( 2 )
anims/open = SubResource( 3 )

[node name="ToggleOn" type="AudioStreamPlayer" parent="InventoryGUI"]
stream = ExtResource( 5 )
volume_db = -17.0
pitch_scale = 1.2

[node name="ToggleOff" type="AudioStreamPlayer" parent="InventoryGUI"]
stream = ExtResource( 4 )
volume_db = -17.0
pitch_scale = 1.2
